# jqboard

./: .gitignore  README.md  pyproject.toml
jqboard/: __init__.py  _generic_clipboard.py  clipboard.py  error.py  linux_clipboard.py  win_clipboard.py
tests/: test.py
