[tool.poetry]
name = "jqboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
klembord = "^0.3.0"
lxml = {version = "^4.9.1", optional = true}
pywin32 = "^304"
Pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
